# link-shortener

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/2024-01-26-191459_init/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
templates/: index.html
