[package]
name = "link-shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"
form_urlencoded = "1.2.1"
chrono = "0.4.33"
sha2 = "0.10.8"
tokio-util = "0.7.10"
